added marquee tag

--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
         <div class="image-frame-1"><img src="images/dynamic.svg" alt="no image found"></div>
     </div>
     
-    <div class="credits"><h2>Created by Lovish Grover</h2></div>
+    <div class="credits"><marquee behavior="scroll" direction="right"><h2>Created by Lovish Grover</h2></marquee></div>
 </body>
 </html>
