again added del

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Home Page</title>
 </head>
 <body>
-    <div class="heading"><h1><i>Web  Technology</i>  </h1></div>
+    <div class="heading"><h1><del>Web  Technology</del>  </h1></div>
     <div class="container-1">
         <div class="frame-1">
             <div class="title">World Wide Web</div><br>
